人事系统与材料表完成............********************************

--- a/src/main/resources/templates/addpersonpage.html
+++ b/src/main/resources/templates/addpersonpage.html
@@ -783,6 +783,8 @@
                                     <label><input type="radio" th:value="1" name="marriaged">已</label>
                                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                                     <label><input type="radio" th:value="2" name="marriaged">离</label>
+                                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                    <label><input type="radio" th:value="3" name="marriaged">丧偶</label>
                                 </td>
                             </tr>
                             <tr>
@@ -952,7 +954,7 @@
                                         <option value="1">毕业证</option>
                                         <option value="2">电工证</option>
                                         <option value="3">焊工证</option>
-                                        <option value="4">结婚证</option>
+                                        <option value="4">安全主任证书</option>
                                     </select>
                                 </td>
 
