--- a/src/main/resources/templates/updatepersonpage.html
+++ b/src/main/resources/templates/updatepersonpage.html
@@ -814,6 +814,9 @@
                                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                                     <label><input type="radio" th:value="2" th:attr="checked=*{marriaged == 2}"
                                                   name="marriaged">离</label>
+                                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                    <label><input type="radio" th:value="3" th:attr="checked=*{marriaged == 3}"
+                                                  name="marriaged">丧偶</label>
                                 </td>
                             </tr>
                             <tr>
@@ -991,7 +994,7 @@
                                         <option value="1">毕业证</option>
                                         <option value="2">电工证</option>
                                         <option value="3">焊工证</option>
-                                        <option value="4">结婚证</option>
+                                        <option value="4">安全主任证</option>
                                     </select>
                                 </td>
 
