--- a/src/main/resources/templates/positionpage.html
+++ b/src/main/resources/templates/positionpage.html
@@ -6,12 +6,22 @@
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="../static/lib/bootstrap/css/bootstrap.css">
-    <script src="../static/lib/jquery-3.3.1.min.js" type="text/javascript"></script>
+    <script src="/lib/jquery-3.3.1.min.js" type="text/javascript"></script>
+    <link rel="stylesheet" type="text/css" href="/lib/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="/lib/bootstrap/css/bootstrap-select.min.css">
-    <script type="text/javascript" src="../static/lib/bootstrap/js/ bootstrap.min.js"></script>
+    <link rel="stylesheet" href="/lib/font-awesome/css/font-awesome.min.css">
+    <script type="text/javascript" src="../static/lib/bootstrap/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="../static/lib/bootstrap/js/bootstrap-select.min.js"></script>
+    <script src="/lib/WdatePicker.js" type="text/javascript"></script>
     <script src="/lib/defaults-zh_CN.js" type="text/javascript"></script>
+    <!---->
+    <!---->
+    <!--<link rel="stylesheet" type="text/css" href="../static/lib/bootstrap/css/bootstrap.css">-->
+    <!--<script src="../static/lib/jquery-3.3.1.min.js" type="text/javascript"></script>-->
+    <!--<link rel="stylesheet" type="text/css" href="/lib/bootstrap/css/bootstrap-select.min.css">-->
+    <!--<script type="text/javascript" src="../static/lib/bootstrap/js/ bootstrap.min.js"></script>-->
+    <!--<script type="text/javascript" src="../static/lib/bootstrap/js/bootstrap-select.min.js"></script>-->
+    <!--<script src="/lib/defaults-zh_CN.js" type="text/javascript"></script>-->
 </head>
 <style type="text/css">
     #innerupdatediv {
@@ -55,6 +65,10 @@
         filter: alpha(opacity=30);
         text-align: center;
         color: #000000
+    }
+
+    .selectpicker {
+        width: 50px
     }
 </style>
 <script>
@@ -102,7 +116,7 @@
         if (positionname.trim().length > 0 || positionLevel != "0") {
             var errormessagediv = document.getElementById("errormessage");
             errormessagediv.innerHTML = "";
-            window.location.href = "/person/queryPositionByName?positionName=" + positionname + "&positionLevel=" + positionLevel+"&currentpage="+currentpage;
+            window.location.href = "/person/queryPositionByName?positionName=" + positionname + "&positionLevel=" + positionLevel + "&currentpage=" + currentpage;
         } else {
             var errormessagediv = document.getElementById("errormessage");
             errormessagediv.innerHTML = "";
@@ -118,7 +132,7 @@
         if (positionname.trim().length > 0 || positionLevel != "0") {
             var errormessagediv = document.getElementById("errormessage");
             errormessagediv.innerHTML = "";
-            window.location.href = "/person/queryPositionByName?positionName=" + positionname + "&positionLevel=" + positionLevel+"&currentpage="+1;
+            window.location.href = "/person/queryPositionByName?positionName=" + positionname + "&positionLevel=" + positionLevel + "&currentpage=" + 1;
         } else {
             var errormessagediv = document.getElementById("errormessage");
             errormessagediv.innerHTML = "";
@@ -228,7 +242,7 @@
                 errormessagediv.style.color = "red";
             } else {
                 var formData = new FormData();
-                formData.append("positionId",$("#positionId").val());
+                formData.append("positionId", $("#positionId").val());
                 formData.append('positionName', $("#newPositionName").val());
                 formData.append('positionLevel', $("#positionLevelId").val());
                 $.ajax({
@@ -240,12 +254,12 @@
                     contentType: false,
                     processData: false,
                     success: function (msg) {
-                        if(msg==0) {
+                        if (msg == 0) {
                             $("#updatediv").hide();
                             window.location.href = "/person/saveUpdateData?id=" + $("#positionId").val() +
                                 "&positionName=" + $("#newPositionName").val() + "&positionLevel=" +
                                 $("#positionLevelId").val();
-                        }else{
+                        } else {
                             $("#updatemessage").show();
                             var errormessagediv = document.getElementById("updatemessage");
                             errormessagediv.innerHTML = "&nbsp;&nbsp;&nbsp;新职位名系统中已存在!";
@@ -397,13 +411,14 @@
                                 </td>
                                 <td style="width: 120px">
                                     <select id="positionLevel" class="selectpicker show-tick form-control"
-                                            data-live-search="true">
-                                        <option th:value="0">请选择</option>
-                                        <option th:value="A">A</option>
-                                        <option th:value="B">B</option>
-                                        <option th:value="C">C</option>
-                                        <option th:value="D">D</option>
-                                        <option th:value="E">E</option>
+                                            data-live-search="true" data-actions-box="true"
+                                            data-selected-text-format="count > 0">
+                                        <option value="0">请选择</option>
+                                        <option value="A">A</option>
+                                        <option value="B">B</option>
+                                        <option value="C">C</option>
+                                        <option value="D">D</option>
+                                        <option value="E">E</option>
                                     </select>
                                 </td>
 
